# project-babylone

./: Cargo.toml
assets/: debugmenu.css  main.css
assets/monsters/: data.ron
assets/monsters/sprites/: goblin.aseprite  small_demon.aseprite
assets/styles/: main.css  mainmenu.css
src/: animation.rs  assets.rs  camera.rs  collision.rs  consts.rs  debug.rs  enemy.rs  gun.rs  main.rs  mainmenu.rs  menu.rs  player.rs  resources.rs  state.rs  world.rs
src/characters/: mod.rs  monsters.rs
src/common/: health.rs
